# trashprojects

./: README.md
Crypto/MD2/: main.cpp  md2  md2.cpp
Crypto/MD2/RSA/: Makefile  global.h  md2  md2.h  md2c.c  mddriver.c  rfc1319
Crypto/MD2/my/: main.c  md2  md2.h
Crypto/MD5/c++/: Makefile  driver.cpp  md5  md5.cpp  md5.h
Crypto/MD5/qt4/: md5.cpp  md5.h
Crypto/RC4/rc4/: rc4  rc4.c
Crypto/RC4/rc4-сpp/: Makefile  main.cpp  rc4  rc4.cpp  rc4.h  rc4.pro
Crypto/blowfish/: blowfish  blowfish.c  constants.txt
Infa/Release/client/: Makefile  addserver.cpp  addserver.h  checker.h  cleardialog.cpp  cleardialog.h  creategame.cpp  creategame.h  findgame.cpp  findgame.h  gameclient.pro  gamedialog.cpp  gamedialog.h  helpbrowser.cpp  helpbrowser.h  install.sh  main.cpp  mainform.cpp  mainform.h  mynetworkobject.h
Infa/Release/client/client_data/doc/: cango.htm  control.htm  coord.htm  enemies.htm  enemy.htm  examples.htm  fight.htm  finish.htm  gencontrol.htm  general.htm  gtypes.htm  highlevel.htm  howto.htm  index.htm  join_game.htm  language.htm  leftwall.htm  logic_ed.htm  lowlevel.htm  my.htm  new_game.htm  properties.htm  server.htm  shooting.htm  statements.htm  target.htm  waypoint.htm  waypointex.htm  waypointprop.htm  waypoints.htm  waypointsprop.htm  world.htm
Infa/Release/client/client_data/kmaps/find/: find1.map  find2.map
Infa/Release/client/client_data/language/functions/highlevel/: entry.txt
Infa/Release/client/client_data/language/functions/keywords/: entry.txt
Infa/Release/client/client_data/language/functions/lowlevel/: entry.txt
Infa/Release/client/client_data/language/functions/statements/: entry.txt
Infa/Release/logik/: LeftWall.txt  SimpleFight.txt  SimpleWaypoints.txt
Infa/Release/server/: gameserv.conf  parser.h  server  server.c
Infa/Release/server/smaps/fight/: fight1.map
Infa/Release/server/smaps/find/: find3.map  find4.map
Password keeper/: createprofile.cpp
Password keeper/distr/hello/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  hello  hello.cpp  hello.pro
Password keeper/distr/hello/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
Password keeper/distr/pkeeper/: AUTHORS  INSTALL  NEWS  README  configure  configure.files  configure.in
Password keeper/distr/pkeeper/src/: Makefile.am  Makefile.in  changeprofile.cpp  checkpass.cpp  createprofile.h  mainform.h  md5.h  pkeeper.pro
Password keeper/pkeeper/: Makefile  changeprofile.h  createprofile.cpp  mainform.cpp  md5.cpp  pkeeper  rc4.cpp  test.pro
Password keeper/src/: Makefile  checkpass.cpp  createprofile.cpp  createprofile.h  main.cpp  md2.cpp  md2.h  rc4.h
blowfish/: blowfish.c
canvas/: Makefile  News.txt  canvas  canvas.pro  main.cpp  mainform.cpp  mainform.h  moc_mainform.cpp  qmake_image_collection.cpp
canvas/data/: News.txt
fractal/: Makefile  UpgradeLog.XML  fractal.ncb  fractal.pro  fractal.sln  fractal.vcproj  fractal.vcproj.7.10.old  itdialog.cpp  itdialog.h  mainform.cpp  mainform.cpp.bak  mainform.h  moc_itdialog.cpp  moc_mainform.cpp  src.pro  vc80.idb
fractal/Debug/: BuildLog.htm  fractal.exe.intermediate.manifest  fractal.ilk  mt.dep
fractal/_UpgradeReport_Files/: UpgradeReport.xslt
qblowfish/: Makefile  main.cpp  qblowfish  qblowfish.pro
qttest/: Makefile  blowfish.cpp  qttest  qttest.pro
Переводы/perevodi/: Makefile  calc.h  cell.cpp  cell.h  datedialog.cpp  datedialog.h  dateinterval.cpp  dateinterval.h  main.cpp  mainform.cpp  mainform.h  moc_datedialog.cpp  moc_dateinterval.cpp  moc_mainform.cpp  moc_spreadsheet.cpp  perevodi  perevodi.pro  perevodi_ru.qm  perevodi_ru.ts  qmake_image_collection.cpp  spreadsheet.cpp  spreadsheet.h
(+5 files in other folders)
